implemented primitive openid support with no nice user interface yet

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 important
 =========
+- openid: change login page to offer gmail login
+- maybe subclassing DjangoUser is not good practice and should be eliminated
 - Profile page with own posts and bookmarks/favourites
 	- edit oneliner
 	- votes placed
@@ -13,12 +15,11 @@ important
 - /oneliner/pk/
 - logo, better header
 - Valid xhtml
-- open id login
 
 
 easy
 ====
-- @bashoneliners.com, update email on site
+- setup email forwarding for @bashoneliners.com and update email on site
 
 
 code cleansing
