added thanks to John Bintz, thanks man!

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,3 +17,5 @@ A big THANK YOU goes to:
 
     jQuery, for making all the JavaScript magic really easy.
 
+    John Bintz, who kindly let go of his @bashoneliners twitter account for us!
+
