now search result ordering is the same as default ordering: latest comes to top

--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,9 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 
 important
 =========
+- rewrite 'wanna do it...'
+- rename caveats col to limitations
+- add wishlist feature
 - adjust texts and links
 	- mission statement
 	- source code
@@ -32,6 +35,11 @@ first release
 - Commenting
 - logo, better header
 - Valid xhtml
+
+
+future releases
+===============
+-
 
 
 code cleansing
