--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,12 @@
 See Trello for a more up to date near-term todo list!
 https://trello.com/board/main/4e7da3cf5a94680b35000893
 
+
+release notes
+=============
+- new field: OneLiner.was_tweeted
+
+
 important
 =========
 - profile
