--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 release notes
 =============
 - new field: OneLiner.was_tweeted
+- renamed field: OneLiner.caveats to limitations
 
 
 important
@@ -27,7 +28,6 @@ important
 	- show own answers
 	- show in oneliner if it answers a question
 - markdown with preview
-- rename caveats col to limitations
 - add (formatted!) details + limitations to rss feed
 - allow login with password
 - allow change password when logged in
