--- a/todo.txt
+++ b/todo.txt
@@ -21,10 +21,11 @@ find users
 first release
 =============
 - see trello for the up to date high level list
-- pagetitle block seems to be ignored
-- hide the show/hide stuff on single question view
-- fix the edit buttons, it's not so good in many places...
-- html5 fixes
+- ui fixes
+	- fix the document titles
+	- hide the show/hide stuff on single question view
+	- fix the edit buttons, it's not so good in many places...
+	- when the content is too short, fill the vertical space before the footer
 	- use red buttons for delete operations
 - wishlist feature
 	- add post answer button to questions, taking to post one-liner page
