minor changes in topbar

--- a/todo.txt
+++ b/todo.txt
@@ -21,6 +21,12 @@ find users
 first release
 =============
 - see trello for the up to date high level list
+- login page needs improvement
+	- full of html5 errors and may not work very well
+	    - because of multiple <input> inside <label>
+	- the logins with input boxes may not work at all
+	- make use of bootstrap placeholders
+- & is not properly escaped in some one-liners
 - ui fixes
 	- fix the document titles
 	- hide the show/hide stuff on single question view
