show markdown quick reference

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 release notes
 =============
 - Explanation and Limitations are now shown expanded by default
+- Explanation and Limitations are now formatted with "markdown"
 - If you are interested to test but prefer to not be too public, you can use http://dev.bashoneliners.com/. Just keep in mind that it is a test site, and I might break it or reset it from time to time, so your data won't be safe there.
 - I am not sure if all of you are interested in these announcements and updates, so in the future I will use the mailing list. You can subscribe to it here: 
 - Adjusted formatting, margins
