basic implementation of comments

--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,8 @@ first release
 =============
 - Note: only the things not yet on Trello
 - cancel button on forms does not work after a failed submit
+- after login, should return to the previous page
+- bug: cannot clear displayname if another user with '' name exists
 - Commenting
 - Voting
 	- vote up
