--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,11 @@ first release
 - after login, should return to the previous page
 - bug: cannot clear displayname if another user with '' name exists
 - Commenting
+	- fix cancel button
+	- fix empty input
+	- fix posted page
+	- hide-show controls for comments, hide by default
+	- confirm behavior when not logged in
 - Voting
 	- vote up
 	- vote down
