added expand-collapse toggle for comments, collapsed by default

--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,11 @@ https://trello.com/board/main/4e7da3cf5a94680b35000893
 
 release notes
 =============
-- added post buttons to show the pages as a demo
-- adjusted texts to deter duplicate or trivial posts
+- Logged in users can post comments on one-liners
+- Comments are shown collapsed by default
+- Dangerous operations (delete one-liner, question) have more prominent (red) buttons
+- Show more of the user interface even when not logged in, as a demo
+- Clarified, adjusted, simplified the texts here and there, posting tips
 
 
 first release
@@ -13,8 +16,6 @@ first release
 - Note: only the things not yet on Trello
 - after login, should return to the previous page
 - bug: cannot clear displayname if another user with '' name exists
-- Commenting
-	- hide-show controls for comments, hide by default
 - Voting
 	- vote up
 	- vote down
