added HackerProfile.get_display_name to simplify things in many templates

--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,9 @@ release notes
 first release
 =============
 - Note: only the things not yet on Trello
+- bug: viewing user profiles when not logged in is broken
+- bug: do not animate comment toggle, it's annoying
+- simplify templates by using user.hackerprofile.get_display_name
 - after login, should return to the previous page
 - bug: cannot clear displayname if another user with '' name exists
 - Voting
