--- a/todo.txt
+++ b/todo.txt
@@ -12,7 +12,7 @@ first release
 - upgrade openid provider, there is a deprecation warning
 - multiple rss feed
 	- a creative commons rss icon would be good too...
-- advanced search
+- nicer bootstrap block for 'no matches'
 - icon generator
 
 
